[tool.poetry]
name = "python-base-starter"
version = "0.1.0"
description = ""
authors = ["Kanisk Chakraborty <57884127+chakrakan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_base_starter"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0"
black = "^23.0.0"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
